Include the header partial inside urls_index.ejs and urls_show.ejs.

--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -4,6 +4,7 @@
   <title>TinyApp</title>
 </head>
 <body>
+  <header> <% include ./partials/_header %> </header>
   <h2> Loop </h2>
   <ul>
     <%  for ( let key in urls ) { %>
