--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -4,6 +4,7 @@
   <title>TinyApp</title>
 </head>
 <body>
+  <header> <% include ./partials/_header %> </header>
   <h2> URL page for <%= shortURL %> </h2>
   <ul>
     <li> <%=  shortURL %> : <%= longURL %></li>
