--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -4,7 +4,7 @@
   <title>TinyApp</title>
 </head>
 <body>
-  <header> <% include ./partials/_header %> </header>
+  <% include ./partials/_header %>
   <h2> Loop </h2>
   <ul>
     <%  for ( let key in urls ) { %>
