--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -7,7 +7,7 @@
   <% include ./partials/_header %> 
   <h2> URL page for <%= shortURL %> </h2>
   <ul>
-    <li> <%=  shortURL %> : <%= longURL %></li>
+    <li> <%=  shortURL %>  --->  <%= longURL %></li>
   </ul>
 </body>
 </html>
