--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -5,17 +5,15 @@
 </head>
 <body>
   <% include ./partials/_header %>
-  <h2> Loop </h2>
+  <h2 style= " margin : 3%"> URLs index </h2>
   <ul>
     <%  for ( let key in urls ) { %>
-      <li>  <%= `${key} ---> ${urls[key]}` %>  
-        <form method="POST" action="/urls/<%= key %>/delete">
-        <label for="longURL"><button> DELETE </button> </label>
-        </form>
+    <li>  <%= `${key} ---> ${urls[key]}` %>  
+      <form method="POST" action="/urls/<%= key %>/delete">
+      <label for="longURL"> <a href="/urls/<%= key %>"> Edite </a> <button> DELETE </button> </label>
+      </form>
     </li>
-
     <% } %>
-    </ul>
-
+  </ul>
 </body>
 </html>
