--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,1 +1,14 @@
-<header>  </header>
+<header>
+  <% if(username) { %>
+    <h2><%= username %></h2>
+    <form method="post" action="/logout">
+      <button type="submit">Log out</button>
+    </form>
+  <% } else { %>
+  <form action="/login" method="POST" style="margin:150px;">
+    <label for="username">Username:</label>
+    <input id="username" type="text" name="username" value="<%= username %>" style="width: 300px">
+    <input type="submit" value="Submit">
+  </form>
+  <% } %>
+</header>
