--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -10,7 +10,7 @@
     <%  for ( let key in urls ) { %>
     <li>  <%= `${key} ---> ${urls[key]}` %>  
       <form method="POST" action="/urls/<%= key %>/delete">
-      <label for="longURL"> <a href="/urls/<%= key %>"> Edite </a> <button> DELETE </button> </label>
+      <label for="longURL"> <a href="/urls/<%= key %>"> Edit </a> <button> DELETE </button> </label>
       </form>
     </li>
     <% } %>
